# hybrid-intelligent-chatbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  GenAI-Assesment-II.docx  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_conversation_messages.py
data/: .gitkeep  faq_support.md  product_smartwidget.md  return_policy.md  warranty.md
frontend/: Dockerfile  __init__.py  app.py  requirements.txt  utils.py
scripts/: local_doctor.py  port_guard.py  wait_healthy.sh
src/: __init__.py  main.py
tests/: __init__.py  conftest.py  test_assessment_routing.py  test_chat_api.py  test_chat_use_case.py  test_classifier_hybrid.py  test_classify_api.py  test_context.py  test_conversation_memory.py  test_conversation_repository_factory.py  test_database_settings.py  test_exception_handlers.py  test_faiss_adapter.py  test_graph_assessment.py  test_graph_mutual_exclusion.py  test_graph_routing.py  test_health.py  test_hexagonal_boundaries.py  test_invoke_config_context.py  test_langsmith_tracing.py  test_orchestrator.py  test_pinecone_adapter.py  test_postgres_adapter.py  test_postgres_conversation_repository.py  test_provider_factory.py  test_qdrant_adapter.py  test_query_classifier.py  test_rate_limit.py  test_routing_contracts.py  test_routing_rules.py  test_security_headers.py  test_seed_dates.py  test_sql_guard.py  test_sql_pipeline_adapter.py  test_streamlit_utils.py  test_vector_factory.py  test_vector_pipeline_adapter.py  test_vector_rag_chain.py
(+109 files in other folders)
